<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your name"
        android:inputType="text"
        app:met_baseColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        app:met_iconRight="@drawable/ic_name"
        app:met_primaryColor="@color/myTextColor"
        app:met_textColorHint="@color/myTextColor" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter yout email"
        android:inputType="textEmailAddress"
        app:met_baseColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        app:met_iconRight="@drawable/ic_name"
        app:met_primaryColor="@color/myTextColor"
        app:met_textColorHint="@color/myTextColor" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etd_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your address"
        android:inputType="text"
        app:met_baseColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        app:met_iconRight="@drawable/ic_name"
        app:met_primaryColor="@color/myTextColor"
        app:met_textColorHint="@color/myTextColor" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etd_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter you password"
        android:inputType="textPassword"
        app:met_baseColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        app:met_iconRight="@drawable/ic_lock"
        app:met_primaryColor="@color/myTextColor"
        app:met_textColorHint="@color/myTextColor" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etd_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter you phone number"
        android:inputType="text"
        app:met_baseColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        app:met_iconRight="@drawable/ic_phone"
        app:met_primaryColor="@color/myTextColor"
        app:met_textColorHint="@color/myTextColor" />



</LinearLayout>