...
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+ Create account"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

        </FrameLayout>
...
